Ajustando testes unitarios